platform/new/cloud9-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud9
  labels:
    component: cloud9
spec:
  selector:
    component: cloud9
  ports:
    - port: 80
      protocol: TCP
