platform/new/girder-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: cis-girder
  name: cis-girder
  namespace: cis-dev
spec:
  ports:
  - name: http
    port: 80
  - name: admin
    port: 8080
  selector:
    component: cis-girder
