platform/new/cloud9-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
  name: cloud9
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          serviceName: cloud9
          servicePort: 80
        path: /
  tls:
  - hosts:
    - localhost
    secretName: cis-tls-secret
