platform/new/girder-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
  name: cis-girder
  namespace: cis-dev
spec:
  tls:
  - hosts:
    - localhost
    secretName: cis-tls-secret
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: cis-girder
          servicePort: 80
      - path: /girder
        backend:
          serviceName: cis-girder
          servicePort: 8080
      - path: /static
        backend:
          serviceName: cis-girder
          servicePort: 8080
      - path: /api
        backend:
          serviceName: cis-girder
          servicePort: 8080
